# 6502Toolkit

./: CMakeLists.txt  LICENSE  README.md  main.c
include/: ilb_types.h
include/cpu/: cpu.h  isa.h
include/memory/: memory.h
include/stack/: stack.h
op_gen/: index.c  main.py
src/cpu/: cpu.c  isa.c
src/memory/: memory.c
src/stack/: stack.c
tests/: file
tools/disassembler/: disassembler.c  main.c
tools/disassembler/include/: disassembler.h
